Small fixes and offers. 1) Added favicon.ico (Takuya's face image) to all pages. 2) When hovering over the entire button, cursor becomes pointer. Before only hovering over link, cursor becomes pointer. 3) Added small opacity for button while hovering the entire button.

--- a/index.css
+++ b/index.css
@@ -84,6 +84,11 @@ ul > li {
   padding: 1em;
   margin: 1.4em 0;
   box-shadow: rgb(28 32 93 / 24%) 0px 2px 8px 0px;
+  cursor: pointer;
+}
+
+ul > li:hover {
+  opacity: 0.85;
 }
 
 ul > li > a {
